assets/css/screen.css
/* ... */
.pointerup {
    margin-bottom: -17px;
    margin-left: 49%;
    font-size: 30px;
}

.pointerup i.fa {
    color: #eaeaea;
}

.bottompagination span.navigation i {
    display: inline-block;
}

span.navigation {
    display: inline-block;
    font-size: 0.93rem;
    font-weight: 700;
    text-align: center;
}

.pagination {
    display: block;
}

iframe {
    max-width: 100%;
}

.transpdark {
    background: rgba(255, 255, 255, 0.75);
    color: #fff;
}

@media (min-width:768px) {
    .jumbotron.fortags {
        margin-bottom: -50px;
        margin-top: 3rem;
        padding: 0;
        height: 350px;
        border-radius: 0;
        background-image: url(../images/stacked-waves-2.svg);
        background-size: cover;
    }

    .jumbotron.fortags .col-md-4 {
        background: rgba(255, 255, 255, 0.75);
        color: #fff;
    }

    .jumbotron.fortags .row {
        margin: 0;
    }
}

.jumbotron.fortags {
    margin-top: 3rem;
    padding: 0;
    border-radius: 0;
    background-image: url(../images/stacked-waves-2.svg);
    background-size: cover;
	margin-bottom: 0px;
}

.jumbotron.fortags a {
    padding: 5px 10px 7px;
    background: #EEE8F5;
    border-radius: 30px;
    color: #0F0817;
    font-weight: 500;
    text-transform: lowercase;
    font-size: 0.8rem;
    display: inline-block;
}

.layout-page .jumbotron.fortags {
    display: none;
}

.mb-30px {
    margin-bottom: 30px;
}

.flex-first {
    -webkit-box-ordinal-group: 0;
    -webkit-order: -1;
    -ms-flex-order: -1;
    order: -1;
}

@media (min-width: 768px) {
    .flex-md-unordered {
        -webkit-box-ordinal-group: 1;
        -webkit-order: 1;
        -ms-flex-order: 1;
        order: 1;
    }

    .flex-first {
        -webkit-box-ordinal-group: 0;
        -webkit-order: 1;
        -ms-flex-order: 1;
        order: 1;
    }
}

@media (max-width: 768px) {
    .share {
        margin-top: 30px;
    }
}

.card .img-fluid {
    width: 100%;
}

.sticky-top-80 {
    top: 80px;
}

.spoiler {
    color: transparent;
    text-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
    transition: all .4s;
    cursor: pointer;
    position: relative;
}

.spoiler:after {
    position: absolute;
    opacity: 0;
    content: 'Click to reveal spoiler';
    top: 45%;
    left: calc(50% - 100px);
    text-shadow: none;
    background: #222;
    color: #fff;
    display: inline-block;
    font-size: 13px;
    line-height: 1;
    padding: 2px 3px;
    width: 150px;
    text-align: center;
    border-radius: 3px;
    transition: all .4s;
}

.spoiler:hover:after {
    opacity: 1;
}

/** Lazy img **/
.lazyimg {
    display: block;
    border: 0 none;
    opacity: 1;
    transition: opacity .25s;
    background: #f2f2f2;
    outline: 0 none;
}

.lazyimg[data-src],
.lazyimg[data-srcset] {
    opacity: 0;
    transition: opacity .25s;
}

/** Overwrite **/
.badge .badge-danger #badge-404{
	color: #fff !important;
	background-color: #C60CE4 !important;
}

.toggle svg{
    margin-top: 0 ! important;
}

h2, h3, h4, h5, h6{
	font-family: itc-american-typewriter;
}

